# Avionics-RTOS

./: .clang-format  .gitignore  Avionics-slave-mcu.ioc  CMakeLists.txt  LICENSE  Makefile  README.md  dbg.conf  prj.conf  sdkconfig
Inc/: buzzer.h  main.h  servo.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h  ws2812.h
Src/: buzzer.c  main.c  servo.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c  ws2812.c
boards/: esp32.overlay
components/bsp/: CMakeLists.txt  bsp.c  bsp.h
components/commu/: CMakeLists.txt  commu.c  commu.h
components/ignitor/: CMakeLists.txt  ignitor.c  ignitor.h
components/lora/: ra01s.c  ra01s.h
components/mpu9250/: CMakeLists.txt  ak8963.c  ak8963.h  calibrate.c  calibrate.h  common.c  common.h  i2c-easy.c  mpu9250.c  mpu9250.h
components/sensors/: CMakeLists.txt  bmp280.c  bmp280.h  gps.c  gps.h  imu.c  imu.h
components/slave/: CMakeLists.txt  slave.c  slave.h
components/storage/: CMakeLists.txt  storage.c  storage.h
inc/: sensors.h
lib/gps/: gps.c  gps.h
lib/pid/: pid.c  pid.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/task/: commu.c  commu.h  fsm.c  fsm.h  logger.c  logger.h  recv.c  recv.h  sensors.c  sensors.h  wdt.c  wdt.h
src/: main.c  sensors.c
